Fixed the iframe being too large.

--- a/stopwatch/css/style.css
+++ b/stopwatch/css/style.css
@@ -63,7 +63,7 @@ a:hover, a:active, a:focus {
     right: 0;
     text-align: center;
     top: 0;
-    width: 404px;
+    width: 300px;
 }
 
 #main a {
